css/styles.css
body {
  background: #111111;
  color: #f5f5f5;
}

h1, h2, h3, h4, h5, h6 {
  color: #f5f5f5;
  letter-spacing: 1px;
  font-family: "Glacial Indifference", -apple-system, BlinkMacSystemFont, Avenir, "Avenir Next", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
}

p {
  font-weight: 200;
}

.head {
  font-size: 7rem;
  font-weight: 700;
}

.subhead {
  font-weight: 600;
  text-align: center;
  font-size: 4rem;
}

#hero {
  min-height: 100vh;
}

#hero .container {
  max-width: 500px;
}

#hero .container .inner {
  text-align: center;
}

#hero .inner h3 {
  font-family: -apple-system, BlinkMacSystemFont, Avenir, "Avenir Next", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
  font-weight: 200;
  max-width: 350px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 5rem;
}

#nav {
  position: absolute;
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
  text-align: center;
}

#nav a {
  font-family: "Inconsolata", monospace;
  color: #a8a8a8;
  text-decoration: none;
  transition: all 0.2s ease;
}

#nav a:hover {
  color: #6e6d6d;
}

.algolia-autocomplete {
  padding: 1rem 3rem;
}

#search {
  height: 7px;
  width: 140px;
  border: 1px solid #a8a8a8;
  padding: 10px 0px 10px 35px;
  color: #a8a8a8;
  background: #111111 url('../img/search.svg') 10px center no-repeat;
  border-radius: 100px;
}

.cta {
  padding: 1.5rem 5rem;
  background: #007EFF;
  border: 3px solid #007EFF;
  border-radius: 30px;
  font-size: 1.5rem;
  letter-spacing: 1px;
  text-decoration: none;
  color: #f5f5f5;
  transition: all 0.2s ease;
}

.cta:hover {
  background: transparent;
  color: #007EFF;
}

#logo {
  height: 120px;
  margin-bottom: 5rem;
}

@media screen and (max-width: 768px) {
  #hero h1 {
    font-size: 4rem;
  }

  #hero h3 {
    font-size: 3rem;
  }

  #logo {
    height: 100px;
  }

  #nav {
    font-size: 1.3rem;
  }

  .nav-item {
    padding-left: 1rem;
    padding-right: 1rem;
  }

  #search {
    display: none;
    margin: 0;
    padding: 0;
  }

  .algolia-autocomplete {
    display: none;
    margin: 0;
    padding: 0;
  }
}

/* Features */
#features {
  margin-bottom: 5rem;
}

#features p {
  font-size: 2rem;
}

/* Code Styles */
pre code {
  background: #1e1e1e;
  font-family: "Inconsolata", monospace;
  position: relative;
  border: none;
}

pre code::after {
  content: attr(lang);
  font-size: 1.5rem;
  color: #BFBFBF;
  position: absolute;
  top: 5px;
  right: 10px;
}

code {
  font-family: "Inconsolata", monospace;
}

.string {
  color: #02C1A7;
}
.special {
  color: #AC2EC5;
}
.global {
  color: #faaa24;
}
.method {
  color: #07b7d6;
}
.comment {
  color: #989898;
}

/* Example Styles */

#example #code pre:first-of-type {
  margin-bottom: 1rem;
}

#example #code pre {
  margin: 0;
}

#app {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  background: #1e1e1e;
  border-radius: 3px;
  text-align: center;
  height: 100%;
}

#app input[type=text] {
  background: #252525;
  color: #f5f5f5;
  width: 250px;
}

#app h1 {
  font-family: -apple-system, BlinkMacSystemFont, Avenir, "Avenir Next", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
  font-weight: 200;
  margin: 1rem;
}

/* === Footer === */
footer {
	margin: 5rem;
}

#footer-content {
	display: flex;
	flex-direction: row;
	align-items: center;
}

#footer-name, #footer-madeby {
	margin-top: 0;
	margin-bottom: 0;
	font-size: 2.5rem;
}

#footer-name {
	font-family: "Gilroy-Bold", sans-serif;
}

#footer-desc {
	margin-left: 1rem;
	font-family: "Gilroy-Light", sans-serif;
}

#footer-logo {
	height: 75px;
	width: 75px;
	border-radius: 10px;
	margin-bottom: 0;
}

#footer-link {
	color: #f5f5f5;
	text-decoration: none;
}

